@@ -1,13 +1,16 @@
 package com.ureca.filmeet.domain.movie.service.query;
 
-import com.ureca.filmeet.domain.movie.dto.response.MoviesRankingsResponse;
+import com.ureca.filmeet.domain.genre.entity.enums.GenreType;
+import com.ureca.filmeet.domain.genre.repository.MovieGenreRepository;
+import com.ureca.filmeet.domain.movie.dto.response.MovieDetailResponse;
+import com.ureca.filmeet.domain.movie.dto.response.PersonnelInfoResponse;
 import com.ureca.filmeet.domain.movie.dto.response.UpcomingMoviesResponse;
+import com.ureca.filmeet.domain.movie.entity.Gallery;
 import com.ureca.filmeet.domain.movie.entity.Movie;
+import com.ureca.filmeet.domain.movie.repository.MovieCountriesRepository;
 import com.ureca.filmeet.domain.movie.repository.MovieRepository;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,7 +21,8 @@ import org.springframework.transaction.annotation.Transactional;
 public class MovieQueryService {
 
     private final MovieRepository movieRepository;
-    private final MovieScoreService movieScoreService;
+    private final MovieGenreRepository movieGenreRepository;
+    private final MovieCountriesRepository movieCountriesRepository;
 
     public List<UpcomingMoviesResponse> getUpcomingMovies(int year, int month) {
         LocalDate currentDate = LocalDate.now();
@@ -32,24 +36,70 @@ public class MovieQueryService {
                 .toList();
     }
 
-    /**
-     * Filmeet TOP 10 영화 리스트를 반환합니다.
-     *
-     * @return TOP 10 영화 리스트
-     */
-    public List<MoviesRankingsResponse> getMoviesRankings() {
-        // 1. 별점 & 좋아요 있는 영화 가져오기
-        List<Movie> movies = movieRepository.findMoviesWithStarRatingAndLikesUnion();
+    public MovieDetailResponse getMovieDetailV1(Long movieId) {
+        Movie movie = movieRepository.findMovieDetailInfo(movieId)
+                .orElseThrow(() -> new RuntimeException("no movie"));
 
-        // 2. 각 영화의 점수 계산
-        Map<Movie, Double> movieScores = movieScoreService.calculateMovieScores(movies);
-
-        // 3. 점수 기준으로 정렬 및 상위 10개 영화 반환
-        return movieScores.entrySet()
+        // 제작국가 리스트 변환
+        List<String> countries = movie.getMovieCountries()
                 .stream()
-                .sorted(Map.Entry.<Movie, Double>comparingByValue().reversed())
-                .limit(10)
-                .map(entry -> MoviesRankingsResponse.of(entry.getKey()))
-                .collect(Collectors.toList());
+                .map(mc -> mc.getCountries().getNation())
+                .toList();
+
+        List<GenreType> genres = movie.getMovieGenres()
+                .stream()
+                .map(movieGenre -> movieGenre.getGenre().getGenreType())
+                .toList();
+
+        // 참여자 정보 리스트 변환
+        List<PersonnelInfoResponse> personnels = movie.getMoviePersonnels()
+                .stream()
+                .map(mp -> new PersonnelInfoResponse(
+                        mp.getMoviePosition(),
+                        mp.getCharacterName(),
+                        mp.getPersonnel().getName(),
+                        mp.getPersonnel().getProfileImage()
+                ))
+                .toList();
+
+        List<String> galleryImages = movie.getGalleries().stream()
+                .map(Gallery::getImageUrl)
+                .toList();
+
+        return MovieDetailResponse.from(movie, countries, genres, personnels, galleryImages);
+    }
+
+    public MovieDetailResponse getMovieDetail(Long movieId) {
+        Movie movie = movieRepository.findMovieDetailInfo(movieId)
+                .orElseThrow(() -> new RuntimeException("no movie"));
+
+        // 제작국가 리스트 변환
+        List<String> countries = movieCountriesRepository.findMovieCountriesByMovieId(movieId)
+                .stream()
+                .map(movieCountries -> movieCountries.getCountries().getNation())
+                .toList();
+
+        List<GenreType> genres = movieGenreRepository.findMovieGenresByMovieId(movieId)
+                .stream()
+                .map(movieGenre -> movieGenre.getGenre().getGenreType())
+                .toList();
+
+        // 참여자 정보 리스트 변환
+        List<PersonnelInfoResponse> personnels = movie.getMoviePersonnels()
+                .stream()
+                .map(mp -> new PersonnelInfoResponse(
+                        mp.getMoviePosition(),
+                        mp.getCharacterName(),
+                        mp.getPersonnel().getName(),
+                        mp.getPersonnel().getProfileImage()
+                ))
+                .toList();
+
+        List<String> galleryImages = movie.getGalleries()
+                .stream()
+                .map(Gallery::getImageUrl)
+                .toList();
+
+        return MovieDetailResponse.from(movie, countries, genres, personnels, galleryImages);
     }
 }
